# cuda-reduce-gpu-test

./: .gitignore  CMakeLists.txt  README.md
src/cpu/: CMakeLists.txt  cpu_subs.cpp  cpu_subs.h
src/gpu/: CMakeLists.txt  main.cu  subroutines.cu  subroutines.cuh
